Updated the style to fix the home page image alignment

--- a/style.css
+++ b/style.css
@@ -47,8 +47,12 @@
 }
 
 .section .portfolio {
-    width: 75%;
+    width: 70%;
     text-align: justify;
+}
+
+.section .prof {
+    width: 20%;
 }
 
 .item .btn {
@@ -176,12 +180,12 @@ footer {
 
 .footer-contact img,
 .social-media-icons img {
-    width: 30px;
-    height: 30px;
+    width: 25px;
+    height: 25px;
 }
 
 .footer-item {
-    width: 32%;
+    width: 30%;
     margin: 10px;
 }
 
